--- a/SnakePlanet/app/src/main/res/layout-sw320dp/snake_listview.xml
+++ b/SnakePlanet/app/src/main/res/layout-sw320dp/snake_listview.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="100dp"
+    android:orientation="vertical"
+    android:background="@drawable/customborder">
+    android:padding="6dip" >
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/snakeListImage" />
+        android:layout_width="90dp"
+        android:layout_height="95dp"
+        android:id="@+id/snakeListImage"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="10dp" />
 
     <TextView
         android:id="@+id/label"
-        android:layout_width="wrap_content"
+        android:layout_width="210dp"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:layout_alignParentTop="true"
+        android:textSize="25sp"
+        android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/snakeListImage"
         android:layout_toEndOf="@+id/snakeListImage"
-        android:layout_marginLeft="86dp"
-        android:layout_marginStart="86dp">
+        android:layout_marginLeft="10dp">
 
         </TextView>
 
