Adding Google Maps Api

--- a/SnakePlanet/app/src/main/res/layout-sw320dp-land/activity_home_screen.xml
+++ b/SnakePlanet/app/src/main/res/layout-sw320dp-land/activity_home_screen.xml
@@ -1,23 +1,19 @@
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeScreen">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeScreen"
+    android:background="@drawable/grasss">
 
 
-    <LinearLayout
-        android:layout_width="500dp"
-        android:layout_height="100dp"
-        android:id="@+id/gridLayouttop">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView"
+        android:id="@+id/relativeLayout">
 
-        <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/gggunit"
-            android:id="@+id/imageView"
-            />
-
-    </LinearLayout>
-
+    </RelativeLayout>
 
     <GridLayout
         android:layout_width="100dp"
@@ -30,28 +26,30 @@
         android:id="@+id/gridLayout"
         android:layout_below="@+id/textView">
 
+
+
+
         <Button
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:text="Name"
             android:id="@+id/nameButton"
+            android:layout_row="0"
+            android:layout_column="0" />
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:text="Location"
+            android:id="@+id/locationButton"
             android:layout_row="1"
             android:layout_column="0" />
 
         <Button
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Location"
-            android:id="@+id/button"
-            android:layout_row="2"
-            android:layout_column="0" />
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:text="Species"
-            android:id="@+id/button2"
-            android:layout_row="3"
+            android:id="@+id/speciesButton"
+            android:layout_row="2"
             android:layout_column="0" />
 
     </GridLayout>
@@ -62,8 +60,26 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Find Snake By:"
         android:id="@+id/textView"
-        android:layout_below="@+id/gridLayouttop"
+        android:paddingLeft="10dp"
+        android:textStyle="bold"
+        android:textColor="#ffe4e7ff"
+        android:textColorHighlight="@color/background_floating_material_dark"
+        android:textColorHint="@color/abc_secondary_text_material_dark"
+        android:textSize="@dimen/abc_text_size_display_1_material"
+        android:layout_below="@+id/logo"
+        android:layout_toRightOf="@+id/relativeLayout"
+        android:layout_toEndOf="@+id/relativeLayout" />
+
+    <ImageView
+        android:layout_width="400dp"
+        android:layout_height="120dp"
+        android:src="@drawable/snakeplanetlogogood"
+        android:id="@+id/logo"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:paddingBottom="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
