--- a/SnakePlanet/app/src/main/res/layout-sw320dp-land/snake_layout.xml
+++ b/SnakePlanet/app/src/main/res/layout-sw320dp-land/snake_layout.xml
@@ -9,17 +9,18 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:background="@drawable/possiblebackground">
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="150dp"
             android:id="@+id/picture"
             android:layout_weight="0.18"
             android:src="@drawable/gggunit"
-            android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -29,7 +30,8 @@
             android:id="@+id/name"
             android:layout_marginTop="21dp"
             android:layout_below="@+id/picture"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:textColor="#ffffffff" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -38,7 +40,8 @@
             android:text="Venomous"
             android:id="@+id/danger"
             android:layout_below="@+id/name"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:textColor="#ffffffff" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -46,6 +49,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Zimbabwe, Uganada, South Africa, South Side, Zimbabwe, Uganada, South Africa, South Side"
             android:id="@+id/location"
+            android:textColor="#ffffffff"
             android:layout_below="@+id/textView6"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="19dp" />
@@ -57,9 +61,11 @@
             android:text="Location:"
             android:id="@+id/textView6"
             android:layout_marginTop="31dp"
+            android:textColor="#ffffffff"
             android:layout_below="@+id/danger"
             android:layout_alignLeft="@+id/textView9"
             android:layout_alignStart="@+id/textView9" />
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -69,6 +75,7 @@
             android:id="@+id/predators"
             android:layout_below="@+id/textView9"
             android:layout_alignLeft="@+id/food"
+            android:textColor="#ffffffff"
             android:layout_alignStart="@+id/food"
             android:layout_marginTop="20dp" />
 
@@ -77,6 +84,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Predators"
+            android:textColor="#ffffffff"
             android:id="@+id/textView9"
             android:layout_marginTop="28dp"
             android:layout_below="@+id/food"
@@ -88,16 +96,16 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="vShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane Shane"
             android:id="@+id/disc"
+            android:textColor="#ffffffff"
             android:layout_marginTop="18dp"
-            android:layout_below="@+id/textView13"
-            android:layout_alignLeft="@+id/location"
-            android:layout_alignStart="@+id/location" />
+            android:layout_below="@+id/textView13" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Food"
+            android:textColor="#ffffffff"
             android:id="@+id/textView11"
             android:layout_below="@+id/disc"
             android:layout_centerHorizontal="true"
@@ -109,6 +117,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Shane Shane Shane Shane SShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane ShaneShane Shane Shane Shane Shanehane"
             android:id="@+id/food"
+            android:textColor="#ffffffff"
             android:layout_below="@+id/textView11"
             android:layout_alignLeft="@+id/disc"
             android:layout_alignStart="@+id/disc"
@@ -119,6 +128,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="First Aid"
+            android:textColor="#ffffffff"
             android:id="@+id/textView7"
             android:layout_marginTop="25dp"
             android:layout_below="@+id/predators"
@@ -130,6 +140,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Do a quick dacne and then run around in circles"
             android:id="@+id/firstaid"
+            android:textColor="#ffffffff"
             android:layout_below="@+id/textView7"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="17dp" />
@@ -139,6 +150,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Discription"
+            android:textColor="#ffffffff"
             android:id="@+id/textView13"
             android:layout_marginTop="25dp"
             android:layout_below="@+id/location"
