--- a/SnakePlanet/app/src/main/res/layout-sw320dp/activity_home_screen.xml
+++ b/SnakePlanet/app/src/main/res/layout-sw320dp/activity_home_screen.xml
@@ -69,7 +69,7 @@
         android:layout_width="400dp"
         android:layout_height="150dp"
         android:src="@drawable/snakeplanetlogogood"
-        android:id="@+id/imageView"
+        android:id="@+id/logo"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
