--- a/SnakePlanet/app/src/main/res/layout/activity_home_screen.xml
+++ b/SnakePlanet/app/src/main/res/layout/activity_home_screen.xml
@@ -1,56 +1,42 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeScreen">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeScreen"
+    android:background="@drawable/grasss">
 
 
-    <LinearLayout
-        android:layout_width="400dp"
-        android:layout_height="200dp"
-        android:id="@+id/gridLayouttop">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView">
 
-        <ImageView
-            android:layout_width="455dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/gggunit"
-            android:id="@+id/imageView"
-            />
-
-    </LinearLayout>
-
+    </RelativeLayout>
 
     <GridLayout
         android:layout_width="100dp"
-        android:layout_height="300dp"
+        android:layout_height="100dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/gridLayout">
+        android:id="@+id/gridLayout"
+        android:layout_below="@+id/textView">
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:id="@+id/nameButton"
+            android:layout_row="0"
+            android:layout_column="0" />
 
         <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Location"
-            android:id="@+id/button"
+            android:id="@+id/locationButton"
             android:layout_row="1"
-            android:layout_column="0" />
-
-        <SearchView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/nameButton"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:queryHint="Name" />
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Species"
-            android:id="@+id/button2"
-            android:layout_row="2"
             android:layout_column="0" />
 
     </GridLayout>
@@ -61,8 +47,24 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Find Snake By:"
         android:id="@+id/textView"
-        android:layout_above="@+id/gridLayout"
+        android:paddingLeft="10dp"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textStyle="bold"
+        android:textColor="#ffe4e7ff"
+        android:textColorHighlight="@color/background_floating_material_dark"
+        android:textColorHint="@color/abc_secondary_text_material_dark"
+        android:textSize="@dimen/abc_text_size_display_1_material" />
+
+    <ImageView
+        android:layout_width="400dp"
+        android:layout_height="200dp"
+        android:src="@drawable/snakeplanetlogogood"
+        android:id="@+id/logo"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:paddingBottom="20dp" />
 
 </RelativeLayout>
